--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo-google-fonts/manrope": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.1.18",
     "expo": "~51.0.17",
     "expo-constants": "~16.0.2",
-    "expo-font": "~12.0.7",
+    "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.17",
     "expo-splash-screen": "~0.27.5",
