--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
-    "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix"
+    "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix",
+    "prepare": "husky"
   },
   "jest": {
     "preset": "jest-expo"
@@ -18,6 +19,7 @@
     "@expo-google-fonts/manrope": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.1.18",
+    "@tanstack/react-query": "^5.56.1",
     "expo": "~51.0.17",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
@@ -34,7 +36,8 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -52,7 +55,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-import-newlines": "^1.4.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "husky": "^9.1.0",
+    "husky": "^9.1.6",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "prettier": "^3.3.3",
