--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/manrope": "^0.2.3",
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^14.0.4",
     "@react-navigation/native": "^6.1.18",
     "@tanstack/react-query": "^5.56.1",
     "expo": "~51.0.17",
@@ -36,7 +36,9 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
+    "rn-swiper-list": "^2.1.0",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
