--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
     "rn-swiper-list": "^2.1.0",
@@ -43,6 +44,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@react-native/metro-config": "^0.76.1",
     "@stylistic/eslint-plugin": "^2.4.0",
     "@stylistic/eslint-plugin-ts": "^2.4.0",
     "@types/jest": "^29.5.12",
@@ -60,7 +62,10 @@
     "husky": "^9.1.6",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
+    "metro": "^0.81.0",
+    "metro-core": "^0.81.0",
     "prettier": "3.3.3",
+    "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
