--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@babel/core": "^7.20.0",
     "@react-native/metro-config": "^0.76.1",
     "@stylistic/eslint-plugin": "^2.4.0",
+    "@stylistic/eslint-plugin-jsx": "^2.12.1",
     "@stylistic/eslint-plugin-ts": "^2.4.0",
     "@types/jest": "^29.5.12",
     "@types/ramda": "^0.30.2",
