--- a/package.json
+++ b/package.json
@@ -20,33 +20,33 @@
     "@expo/vector-icons": "^14.0.4",
     "@gorhom/bottom-sheet": "^5.0.6",
     "@hookform/resolvers": "^3.9.0",
-    "@react-navigation/bottom-tabs": "^7.0.6",
-    "@react-navigation/drawer": "^7.0.6",
+    "@react-navigation/bottom-tabs": "^7.0.0",
+    "@react-navigation/drawer": "^7.0.0",
     "@react-navigation/elements": "^2.1.0",
-    "@react-navigation/native": "^7.0.3",
-    "@react-navigation/native-stack": "^7.1.0",
+    "@react-navigation/native": "^7.0.0",
+    "@react-navigation/native-stack": "^7.0.0",
     "@tanstack/react-query": "^5.56.1",
-    "expo": "^52.0.6",
-    "expo-apple-authentication": "~7.1.2",
+    "expo": "~52.0.26",
+    "expo-apple-authentication": "~7.1.3",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
-    "expo-linking": "~7.0.2",
-    "expo-localization": "~15.0.3",
-    "expo-router": "~4.0.5",
-    "expo-splash-screen": "~0.29.9",
-    "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.2",
-    "expo-web-browser": "~14.0.1",
+    "expo-linking": "~7.0.4",
+    "expo-localization": "~16.0.1",
+    "expo-router": "~4.0.17",
+    "expo-splash-screen": "~0.29.21",
+    "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.7",
+    "expo-web-browser": "~14.0.2",
     "ramda": "^0.30.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.1",
-    "react-native": "0.76.1",
+    "react-native": "0.76.6",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-localize": "^3.3.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.0.0",
+    "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
@@ -76,7 +76,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "husky": "^9.1.6",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.1",
+    "jest-expo": "~52.0.3",
     "metro": "^0.81.0",
     "metro-core": "^0.81.0",
     "prettier": "3.3.3",
